--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,13 +7,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "framer-motion": "^12.23.24",
+    "framer-motion": "11.18.2",
     "lucide-react": "^0.548.0",
-    "next": "14.2.5",
+    "next": "14.2.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@next/swc-wasm-nodejs": "^16.0.1",
     "@types/node": "^24.7.2",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
