--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,5 +21,8 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.13",
     "typescript": "5.6.2"
+  },
+  "optionalDependencies": {
+    "@next/swc-win32-x64-msvc": "^16.1.2"
   }
 }
